# nexus

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  README.md  ROADMAP.md  STATUS.md  pyproject.toml  requirements.txt  setup.py
docs/guides/: data-contracts-guide.md
examples/: event_usage_example.py
src/nexus/: __init__.py
src/nexus/core/: __init__.py  events.py
tests/: __init__.py
tests/unit/core/: test_events.py
